# Intentoor

./: .dockerignore  .gitignore  docker-compose.yml  readme.md
docker/: engine.Dockerfile  ingestor.Dockerfile
engine/: .dockerignore  Cargo.toml  Dockerfile  README.md
engine/crates/engine/: Cargo.toml
engine/crates/engine/src/: main.rs
engine/crates/tui/: Cargo.toml
engine/crates/tui/src/: main.rs
ingestor/: README.md  go.mod
ingestor/cmd/ingestor/: main.go
ingestor/internal/log/: jsonl.go
ingestor/internal/providers/: cowswap.go  dedup.go  provider.go  runner.go  uniswapx.go
ingestor/internal/pub/: zmq_pub.go
shared/: intent.sample.json  intent.schema.json
tools/: inspect_intents.py
