[workspace]
resolver = "2"
members = [
  "crates/engine",
  "crates/tui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
zmq = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
ratatui = "0.29"
crossterm = "0.28"
